gccida/g0/decl_attributes
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decl_attributes/src/attribs.c:735:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decl_attributes/src/attribs.c:736:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decl_attributes/src/attribs.c:739:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decl_attributes/src/attribs.c:740:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decl_attributes/src/attribs.c:836:19: error: expected expression
v6 = ( tree_node *)( *( __int64 (  **)( tree *, tree, tree, _QWORD, bool *))( *( _QWORD *)&i[4] + 24LL))( 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decl_attributes/src/attribs.c:836:8: error: use of undeclared identifier 'tree_node'
v6 = ( tree_node *)( *( __int64 (  **)( tree *, tree, tree, _QWORD, bool *))( *( _QWORD *)&i[4] + 24LL))( 
       ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decl_attributes/src/obj/attribs.o] Error 1
